patched openapi documentation
